fix navbar dark mode toggle button breakpoint

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+ $navbar-breakpoint: 32px;
+
 @import "bulma/sass/utilities/_all.sass";
 @import "bulma/sass/base/_all.sass";
 @import "bulma/sass/form/_all.sass";
